--- a/templates/abstract.html
+++ b/templates/abstract.html
@@ -6,7 +6,7 @@
 		<meta name="language" content="en" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<link type="text/css" href="http://www.test_server.com/demo.css" rel="stylesheet"/>
+		<link type="text/css" href="http://wentao.me/site_media/demo.css" rel="stylesheet"/>
 
 
 		
