--- a/templates/artical.html
+++ b/templates/artical.html
@@ -37,7 +37,7 @@
 				<h4 class="subtitle">标签</h4>
 				{% for tag in tags %}
 					<span> 
-						<a href="/articalsInTag/{{tag.id}}">{{tag.name}}</a>   
+						<a href="/articalsInTag/{{tag.id}}/">{{tag.name}}</a>   
 					</span>		
 				{% endfor %}
 				</div>
