--- a/templates/abstract.html
+++ b/templates/abstract.html
@@ -28,7 +28,7 @@
 						</div>	
 						<div class="abstract">
 							<h2 class="abstract_title"><a href="/blog/{{p.id}}/">{{p.title}}</a></h2>
-							<p class="abstract_content">{{p.content|slice:"120"}}</p>
+							<p class="abstract_content">{{p.content|slice:"120"}}...</p>
 						</div>
 					</div>
 				{% endfor %}
