--- a/templates/artical.html
+++ b/templates/artical.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 	<head>
-		<title>TAO'S NEWS</title>
+		<title>IT 工匠</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="language" content="en" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<link type="text/css" href="http://wentao.me/site_media/demo.css" rel="stylesheet"/>
+	<!--	<link type="text/css" href="http://wentao.me/site_media/demo.css" rel="stylesheet"/> -->
 
 
 		
@@ -15,7 +15,7 @@
 	<body>
 		<div>	
 			<div id="header">
-					<h1><a href="/">TAO'S NEWS</a></h1>	
+					<h1><a href="/">TAO'S LOG</a></h1>	
 			</div>
 
 			<div id="blog">
@@ -23,11 +23,12 @@
 					<div class="abstract_box">
 						<div class="date_box">
 							<span class="year_month">{{artical.creation_time.year}}.{{artical.creation_time.month}}</span>
-							<span class="day">{{artical.creation_time.day}}</span>
+							<span class="day">.{{artical.creation_time.day}}</span>
 						</div>	
 						<div class="abstract">
 							<h2 class="abstract_title">{{artical.title}}</h2>
 							<p class="abstract_content">{{artical.content}}</p>
+							<p><a href="/">[回首页]</a></p>
 						</div>
 					</div>
 			</div>
