--- a/templates/iptest.html
+++ b/templates/iptest.html
@@ -6,7 +6,7 @@
 	<body>
 		<div>
 			<p>
-				<form action=“http://wentao.me/writeip/” method=“POST”>
+				<form action=http://wentao.me/writeip method=GET>
 					ip:<input type="text" name="ip" value=""/><br/>
 					<input type="submit"/>
 				</form>	
