--- a/templates/abstract.html
+++ b/templates/abstract.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<title>IT 工匠</title>
+		<title>张文韬</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="language" content="en" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-	<!--	<link type="text/css" href="http://wentao.me/site_media/demo.css" rel="stylesheet"/>-->
-		<script type="text/javascript">
+		<link type="text/css" href="http://127.0.0.1:8000/site_media/demo.css" rel="stylesheet"/>
+<!--		<script type="text/javascript">
 			  var _gaq = _gaq || [];
 			  _gaq.push(['_setAccount', 'UA-28177213-1']);
 			  _gaq.push(['_trackPageview']);
@@ -17,32 +17,34 @@
 			    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
 			    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 			  })();
-		</script>
+		</script>-->
 	</head>
 
 	<body>
-		<div>	
+		<div id="page">
 			<div id="header">
-					<h1><a href="/">TAO'S LOG</a></h1>	
-					<h3><a href="/about/">about</a></h3>
+					<h1><a href="/">张文韬</a></h1>
+					<h3><a href="/about/">关于我</a></h3>
 			</div>
-
+	
 			<div id="blog">
 				<h4 class="subtitle">文章</h4>
 				{% for p in artical_list %}
 					<div class="abstract_box">
 						<div class="date_box">
 							<span class="year_month">{{p.creation_time.year}}.{{p.creation_time.month}}</span>
-							<span class="day">.{{p.creation_time.day}}</span>
+                	                                <span class="day">{{p.creation_time.day}}</span>	
 						</div>	
 						<div class="abstract">
 							<h2 class="abstract_title"><a href="/blog/{{p.id}}/">{{p.title}}</a></h2>
 							<p class="abstract_content">{{p.content|slice:"120"}}...</p>
 						</div>
+						<div class="clear">
+						</div>
 					</div>
 				{% endfor %}
 			</div>
-		
+
 			<div id="sidebar">
 				<div class= "box">
 				<h4 class="subtitle">标签</h4>
@@ -51,9 +53,11 @@
 				{% endfor %}
 				</div>
 			</div>
-			<p>
-   				 <a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88"/></a>
-  			</p>
+			<div id="footer">
+				<p>
+       					 <a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88"/></a>
+  				</p>
+			</div>
 		</div>
 	</body>
  </html>
