--- a/templates/abstract.html
+++ b/templates/abstract.html
@@ -6,8 +6,8 @@
 		<meta name="language" content="en" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<link type="text/css" href="http://127.0.0.1:8000/site_media/demo.css" rel="stylesheet"/>
-<!--		<script type="text/javascript">
+		<link type="text/css" href="http://wentao.me/site_media/demo.css" rel="stylesheet"/>
+		<script type="text/javascript">
 			  var _gaq = _gaq || [];
 			  _gaq.push(['_setAccount', 'UA-28177213-1']);
 			  _gaq.push(['_trackPageview']);
@@ -17,7 +17,7 @@
 			    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
 			    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 			  })();
-		</script>-->
+		</script>
 	</head>
 
 	<body>
