--- a/templates/artical.html
+++ b/templates/artical.html
@@ -6,7 +6,7 @@
 		<meta name="language" content="en" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-	<!--	<link type="text/css" href="http://wentao.me/site_media/demo.css" rel="stylesheet"/> -->
+		<link type="text/css" href="http://wentao.me/site_media/demo.css" rel="stylesheet"/>
 
 
 		
@@ -14,59 +14,63 @@
 
 	<body>
 		<div>	
-			<div id="header">
-					<h1><a href="/">TAO'S LOG</a></h1>	
-			</div>
+			<div id="page">
+				<div id="header">
+						<h1><a href="/">TAO'S LOG</a></h1>	
+				</div>
 
-			<div id="blog">
-				<h4 class="subtitle">文章</h4>
-					<div class="abstract_box">
-						<div class="date_box">
-							<span class="year_month">{{artical.creation_time.year}}.{{artical.creation_time.month}}</span>
-							<span class="day">.{{artical.creation_time.day}}</span>
-						</div>	
-						<div class="abstract">
-							<h2 class="abstract_title">{{artical.title}}</h2>
-							<p class="abstract_content">{{artical.content}}</p>
-							<div>
-								{% if comment_list %}
-									<p>以下是留言</>
-									{% for comment in comment_list %}
-										<div>
-											{{comment.visitor_name}} 说:<br/>
-											<p>{{comment.content}}</p>	
-										</div>
-									{% endfor %}
-								{% else %}
-									<p>此篇文章还没留言哟</p>
-								{% endif %}
-								<p>您可以在下面留言，和我交流</p>
-								<p>
-									<form action="/comment" method="GET">
-										<input type="hidden" name="artical_id" value="{{artical.id}}"/>
-										<input type="hidden" name="page_url" value="{{page_url}}"/>
-										名字:<input type="text" name="name" value=""/><br/>
-										邮箱:<input type="text" name="email" value=""/><br/>
-										网站:<input type="text" name="site" value=""/><br/>
-										内容:<br/>
-										<textarea name="content"rows="10" cols="30"></textarea><br/>
-										<input type="submit" value="留言"/>
-									</form>	
-								</p>
+				<div id="blog">
+					<h4 class="subtitle">文章</h4>
+						<div class="abstract_box">
+							<div class="date_box">
+								<span class="year_month">{{artical.creation_time.year}}.{{artical.creation_time.month}}</span>
+								<span class="day">{{artical.creation_time.day}}</span>
+							</div>	
+							<div class="abstract">
+								<h2 class="abstract_title">{{artical.title}}</h2>
+								<p class="abstract_content">{{artical.content}}</p>
+								<div>
+									{% if comment_list %}
+										<p>以下是留言</>
+										{% for comment in comment_list %}
+											<div>
+												{{comment.visitor_name}} 说:<br/>
+												<p>{{comment.content}}</p>	
+											</div>
+										{% endfor %}
+									{% else %}
+										<p>此篇文章还没留言哟</p>
+									{% endif %}
+									<p>您可以在下面留言，和我交流</p>
+									<p>
+										<form action="/comment" method="GET">
+											<input type="hidden" name="artical_id" value="{{artical.id}}"/>
+											<input type="hidden" name="page_url" value="{{page_url}}"/>
+											名字:<input type="text" name="name" value=""/><br/>
+											邮箱:<input type="text" name="email" value=""/><br/>
+											网站:<input type="text" name="site" value=""/><br/>
+											内容:<br/>
+											<textarea name="content"rows="10" cols="30"></textarea><br/>
+											<input type="submit" value="留言"/>
+										</form>	
+									</p>
+								</div>
+								<p><a href="/">[回首页]</a></p>
 							</div>
-							<p><a href="/">[回首页]</a></p>
 						</div>
+				</div>
+			
+				<div id="sidebar">
+					<div class= "box">
+					<h4 class="subtitle">标签</h4>
+					{% for tag in tags %}
+						<span> 
+							<a href="/articalsInTag/{{tag.id}}/">{{tag.name}}</a>   
+						</span>		
+					{% endfor %}
 					</div>
-			</div>
-		
-			<div id="sidebar">
-				<div class= "box">
-				<h4 class="subtitle">标签</h4>
-				{% for tag in tags %}
-					<span> 
-						<a href="/articalsInTag/{{tag.id}}/">{{tag.name}}</a>   
-					</span>		
-				{% endfor %}
+				</div>
+				<div class="clear">
 				</div>
 			</div>
 		</div>
