--- a/templates/abstract.html
+++ b/templates/abstract.html
@@ -24,7 +24,9 @@
 		<div id="page">
 			<div id="header">
 					<h1><a href="/">张文韬</a></h1>
-					<h3><a href="/about/">关于我</a></h3>
+					<div id="nav_bar">
+						<h3><a href="/about/">关于我</a></h3>
+					</div>
 			</div>
 	
 			<div id="blog">
