--- a/templates/abstract.html
+++ b/templates/abstract.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<title>张文韬</title>
+		<title>文韬的BLOG</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="language" content="en" />
 		<meta name="description" content="" />
@@ -23,7 +23,7 @@
 	<body>
 		<div id="page">
 			<div id="header">
-					<h1><a href="/">张文韬</a></h1>
+					<h1><a href="/">文韬的BLOG</a></h1>
 					<div id="nav_bar">
 						<h3><a href="/about/">关于我</a></h3>
 					</div>
