--- a/templates/artical.html
+++ b/templates/artical.html
@@ -16,7 +16,10 @@
 		<div>	
 			<div id="page">
 				<div id="header">
-						<h1><a href="/">TAO'S LOG</a></h1>	
+					<h1><a href="/">文韬的BLOG</a></h1>
+					<div id="nav_bar">
+						<h3><a href="/about/">关于我</a></h3>
+					</div>
 				</div>
 
 				<div id="blog">
