--- a/templates/demo.css
+++ b/templates/demo.css
@@ -7,7 +7,7 @@ body{
 
 #page{
 	width:800px;
-	padding:50px 20px 30px 20px;
+	padding:50px 20px 10px 20px;
 	border-width:1px;
 	box-shadow: 2px 2px 8px #aaa;
 	background-color:white;
@@ -19,8 +19,12 @@ body{
 }
 
 #footer{
+	margin-top:50px;
 	clear:both;
+	font-size:10px;
 }
+
+	
 		
 
 div{
