--- a/templates/artical.html
+++ b/templates/artical.html
@@ -1,81 +1,41 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
-	<head>
-		<title>文韬的BLOG</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta name="language" content="en" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<link type="text/css" href="http://wentao.me/site_media/demo.css" rel="stylesheet"/>
-
-
-		
-	</head>
-
-	<body>
-		<div>	
-			<div id="page">
-				<div id="header">
-					<h1><a href="/">文韬的BLOG</a></h1>
-					<div id="nav_bar">
-						<h3><a href="/about/">关于我</a></h3>
+{% extends "base.html" %}
+{% block blog %}
+<h4 class="subtitle">文章全文</h4>
+<div class="abstract_box">
+	<div class="date_box">
+		<span class="year_month">{{artical.creation_time.year}}.{{artical.creation_time.month}}</span>
+		<span class="day">{{artical.creation_time.day}}</span>
+	</div>	
+	<div class="abstract">
+		<h2 class="abstract_title">{{artical.title}}</h2>
+		<p class="abstract_content">{{artical.content|safe}}</p>
+		<div class="clear">
+			{% if comment_list %}
+				<p style="margin-bottom:10px">{{com_num}}条评论>></p>
+				{% for comment in comment_list %}
+					<div style="margin-bottom:5px">
+						{{comment.visitor_name}} 说:<br/>
+						<p style="text-indent:26px">{{comment.content}}</p>	
 					</div>
-				</div>
-
-				<div id="blog">
-					<h4 class="subtitle">文章全文</h4>
-						<div class="abstract_box">
-							<div class="date_box">
-								<span class="year_month">{{artical.creation_time.year}}.{{artical.creation_time.month}}</span>
-								<span class="day">{{artical.creation_time.day}}</span>
-							</div>	
-							<div class="abstract">
-								<h2 class="abstract_title">{{artical.title}}</h2>
-								<p class="abstract_content">{{artical.content}}</p>
-								<div class="clear">
-									{% if comment_list %}
-										<p style="margin-bottom:10px">{{com_num}}条评论>></p>
-										{% for comment in comment_list %}
-											<div style="margin-bottom:5px">
-												{{comment.visitor_name}} 说:<br/>
-												<p style="text-indent:26px">{{comment.content}}</p>	
-											</div>
-										{% endfor %}
-									{% else %}
-										<p>此篇文章还没留言哟</p>
-									{% endif %}
-									<p style="margin-top:10px">您可以在下面留言，和我交流>></p>
-									<p>
-										<form action="/comment" method="GET">
-											<input type="hidden" name="artical_id" value="{{artical.id}}"/>
-											<input type="hidden" name="page_url" value="{{page_url}}"/>
-											名字:<input type="text" name="name" value=""/><br/>
-											邮箱:<input type="text" name="email" value=""/><br/>
-											网站:<input type="text" name="site" value=""/><br/>
-											内容:<br/>
-											<textarea name="content"rows="5" cols="50"></textarea><br/>
-											<input type="submit" value="留言"/>
-										</form>	
-									</p>
-								</div>
-								<p><a href="/">[回首页]</a></p>
-							</div>
-						</div>
-				</div>
-			
-				<div id="sidebar">
-					<div class= "box">
-					<h4 class="subtitle">标签</h4>
-					{% for tag in tags %}
-						<span> 
-							<a href="/articalsInTag/{{tag.id}}/">{{tag.name}}</a>   
-						</span>		
-					{% endfor %}
-					</div>
-				</div>
-				<div class="clear">
-				</div>
-			</div>
+				{% endfor %}
+			{% else %}
+				<p>此篇文章还没留言哟</p>
+			{% endif %}
+			<p style="margin-top:10px">您可以在下面留言，和我交流>></p>
+			<p>
+				<form action="/comment" method="GET">
+					<input type="hidden" name="artical_id" value="{{artical.id}}"/>
+					<input type="hidden" name="page_url" value="{{page_url}}"/>
+					名字:<input type="text" name="name" value=""/><br/>
+					邮箱:<input type="text" name="email" value=""/><br/>
+					网站:<input type="text" name="site" value=""/><br/>
+					内容:<br/>
+					<textarea name="content"rows="5" cols="50"></textarea><br/>
+					<input type="submit" value="留言"/>
+				</form>	
+			</p>
 		</div>
-	</body>
- </html>
+		<p><a href="/">[回首页]</a></p>
+	</div>
+</div>
+{% endblock %}				
