--- a/templates/abstract.html
+++ b/templates/abstract.html
@@ -9,7 +9,7 @@
 			</div>	
 			<div class="abstract">
 				<h2 class="abstract_title"><a href="/blog/{{p.id}}/">{{p.title}}</a></h2>
-				<p class="abstract_content">{{p.content|striptags|slice:"120"}}...</p>
+				<p class="abstract_content">{{p.content|escape|striptags|slice:"120"}}...</p>
 			</div>
 			<div class="clear">
 			</div>
