--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,6 @@
 			  var _gaq = _gaq || [];
 			  _gaq.push(['_setAccount', 'UA-28177213-1']);
 			  _gaq.push(['_trackPageview']);
-			
 			  (function() {
 			    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
 			    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
@@ -22,15 +21,17 @@
 			<div id="header">
 					<h1><a href="/">文韬的布落格儿</a></h1>
 					<div id="nav_bar">
-						<h3><a href="/about/">关于我</a></h3>
+						<h3><a href="/about/">关于</a></h3>
 					</div>
+			<div class="clear"></div>
 			</div>
-	
+			<hr/>	
 			<div id="blog">
 				{% block blog %}
 				{% endblock %}				
 			</div>
-
+			<!--<div class="clear"></div>-->
+			<!--
 			<div id="sidebar">
 				<div class= "box">
 				<h4 class="subtitle">标签</h4>
@@ -39,8 +40,10 @@
 				{% endfor %}
 				</div>
 			</div>
+			-->
+			<hr/>	
 			<div id="footer">
-				<p class="clear">版权所有@2011-2012 文韬的BLOG.</p>
+				<p id="copyright" class="clear">版权所有@2011-2012 文韬的BLOG.</p>
 			</div>
 		</div>
 	</body>
