--- a/templates/abstract.html
+++ b/templates/abstract.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
+{% load markup %}
 {% block blog %}
-	<h4 class="subtitle">文章</h4>
+<!--	<h4 class="subtitle">文章</h4>-->
 	{% for p in artical_list %}
 		<div class="abstract_box">
 			<div class="date_box">
@@ -9,7 +10,7 @@
 			</div>	
 			<div class="abstract">
 				<h2 class="abstract_title"><a href="/blog/{{p.id}}/">{{p.title}}</a></h2>
-				<p class="abstract_content">{{p.content|escape|striptags|slice:"120"}}...</p>
+				<p class="abstract_content">{{p.content|markdown|escape|striptags|slice:"120"}}...</p>
 			</div>
 			<div class="clear">
 			</div>
