--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
 			-->
 			<hr/>	
 			<div id="footer">
-				<p id="copyright" class="clear">版权所有@2011-2012 文韬的BLOG.</p>
+				<p id="copyright" class="clear">copyright&copy2011-2012 文韬的BLOG</p>
 			</div>
 		</div>
 	</body>
