add error page template

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
 {% block blog %}
-<h1 style="text-align:center;">404 了</h1>
+<h1 style="text-align:center;">404</h1>
 {% endblock %}
