--- a/templates/artical.html
+++ b/templates/artical.html
@@ -16,7 +16,7 @@
 						<img src="/static/head.png"/>
 					</div>
 					<div>
-						<a class="name" href="">{{comment.visitor_name}}</a>
+						<a class="name">{{comment.visitor_name}}</a>
 						<a class="time"> at {{comment.creation_time}}</a>
 						<p class="content">{{comment.content}}</p>	
 					</div>
