--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,9 @@
 
 	<body>
 		<div id="page">
+			<a style="float:right;" href="/feed/" target="_blank">
+				<img src="/static/rss.png"/>
+			</a>
 			<div id="header">
 					<h1><a href="/">文韬的BLOG</a></h1>
 					<div id="nav_bar">
